---
config:
  class:
    hideEmptyMembersBox: true
---
classDiagram
direction TB

class AirspaceSharedMemory {
    +pthread_mutex_t lock
    +int aircraft_count
    +bool updated
    +AircraftData aircraft_data[100]
}

class AircraftData {
    +int id
    +int entryTime
    +float x
    +float y
    +float z
    +float speedX
    +float speedY
    +float speedZ
}

class Aircraft {
    -int id
    -int entryTime
    -int lastupdatedTime
    -double x
    -double y
    -double z
    -double speedX
    -double speedY
    -double speedZ
    -bool running
    -int shm_index
    -char service_name[256]
    -attach
    -position_thread
    -ipc_thread
    @@ static Airspace* shared_memory
    @@ static int aircraft_index
    +Aircraft(int, int, double, double, double, double, double, double, Airspace*)
    +void startThreads()
    +void stopThreads()
    +~Aircraft()
    +void handle_operator_message(int, OperatorCommand*)
    +void handle_radar_message(int, RadarMessage*)
    +void send_terminator_message()
    +static void* updatePositionThread(void*)
    +static void* messageHandlerThread(void*)
}

class AircraftManager {
    +aircraft_queue
    +active_aircrafts
    +load_aircraft_data_from_file()
    +init_shared_memory()
    +spawn_aircrafts_by_time()
    +verify_aircraft_data()
}

%% Relationships
Aircraft --> AircraftData : updates
Aircraft --> AirspaceSharedMemory : writes to
AirspaceSharedMemory "1" *-- "100" AircraftData : contains
AircraftManager --> Aircraft : spawns
AircraftManager --> AirspaceSharedMemory : initializes
